...
        let image = UIImage(named: AppDataScreen.image.checkMark)
        let view = UIImageView(image: image)
        return view
    }()

    /// Button secure to show password.
    private lazy var secureButton = UIButton(type: .custom)

    // MARK: - Public Properties

    /// Is the field filled to the minimum number char.
    var isFill: Bool {
        guard let text = self.text else { return false }
...
