...
    }

    // MARK: - Private Methods

    /// Set identifier for components.
    private func setUITests() {
        self.accessibilityIdentifier = "signUpView"
    }
}

